--- a/OnlineAdminisionSystem/build.gradle
+++ b/OnlineAdminisionSystem/build.gradle
@@ -19,6 +19,7 @@ implementation('io.jsonwebtoken:jjwt:0.2')
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 test {
