--- a/OnlineAdminisionSystem/src/main/resources/application.properties
+++ b/OnlineAdminisionSystem/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port:9090
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=ninenine0923
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
